@@ -14,6 +14,8 @@ Version 1.3.14+svn:
    * damage statistics for the current turn also works for observers now
    * skip replay no longer skips the story for players only for observers
      (bug #9538)
+   * observers without the addon installed can watch the second scenario of
+     a MP campaign again (bug #10794)
  * user interface:
    * Made ESC clear hotkey when changing hotkeys
    * Made quick replay skip messages
